# ovx

./: CMakeLists.txt  README.md
framework/: .vx_matrix.c.swp  CMakeLists.txt  vx_array.c  vx_context.c  vx_convolution.c  vx_delay.c  vx_distribution.c  vx_error.c  vx_graph.c  vx_image.c  vx_kernel.c  vx_logging.c  vx_lut.c  vx_matrix.c  vx_memory.c  vx_meta_format.c  vx_node.c  vx_node_api.c  vx_object_array.c  vx_parameter.c  vx_pyramid.c  vx_reference.c  vx_remap.c  vx_scalar.c  vx_target.c  vx_threshold.c  vxu.c
include/: vx_ext_ovx.h
include/VX/: vx_api.h
include/internal/: vx_internal.h  vx_memory.h
sample/: CMakeLists.txt  main.c
targets/c_model/: CMakeLists.txt  vx_interface.c  vx_interface.h  vx_kernel_list.c  vx_kernel_list.h
targets/c_model/kernels/: cmodel_color_convert.c
targets/opencl/: CMakeLists.txt  vx_interface.c
unittest/: CMakeLists.txt  unittest.c  ut.h  ut_context.c  ut_graph.c  ut_image.c  ut_logging.c  ut_matrix.c  ut_memory.c  ut_reference.c
unittest/seatest/: license.txt  seatest.c
